<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activites.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_1x" />

        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="250dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/desc_google_icon"
            android:src="@drawable/googleg_color" />


        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signed_out"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginTop="75dp"
            android:text="@string/welcome_to_mission_impawssible"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/getting_started_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:text="@string/sign_in_with_google"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:gravity="center"
            android:maxLines="5"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_optional_action"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:text="Optional Action"
            tools:visibility="visible" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="185dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:visibility="visible"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/sign_out_and_disconnect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="200dp"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/project_cat_logo_pos"
            android:layout_width="220dp"
            android:layout_height="53dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="29dp"
            android:layout_marginStart="48dp"
            app:srcCompat="@drawable/project_cat_logo_pos" />

        <ImageView
            android:id="@+id/wwf_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/project_cat_logo_pos"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="48dp"
            app:srcCompat="@drawable/wwf_logo_black_background" />


    </RelativeLayout>


    <!--<TextView-->
    <!--android:id="@+id/welcome_text"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="75dp"-->
    <!--android:text="@string/welcome_to_mission_impawssible"-->
    <!--android:textColor="#FFFFFF"-->
    <!--/>-->

    <!--<TextView-->
    <!--android:id="@+id/getting_started_instructions"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:text="@string/sign_in_with_google"-->
    <!--android:layout_marginTop="150dp"-->
    <!--android:textColor="#FFFFFF"-->
    <!--/>-->

    <!--<ImageView-->
    <!--android:id="@+id/google_icon"-->
    <!--android:layout_width="48dp"-->
    <!--android:layout_height="48dp"-->
    <!--android:layout_marginBottom="10dp"-->
    <!--android:layout_marginTop="100dp"-->
    <!--android:contentDescription="@string/desc_google_icon"-->
    <!--android:src="@drawable/googleg_color" />-->

    <!--<TextView-->
    <!--android:id="@+id/status"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/signed_out"-->
    <!--android:textColor="@android:color/white"-->
    <!--android:textSize="14sp" />-->
    <!--<TextView-->
    <!--android:id="@+id/detail"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:fadeScrollbars="true"-->
    <!--android:gravity="center"-->
    <!--android:maxLines="5"-->
    <!--android:padding="10dp"-->
    <!--android:scrollbars="vertical"-->
    <!--android:textColor="@android:color/white"-->
    <!--android:textSize="14sp" />-->

    <!--<Button-->
    <!--android:id="@+id/button_optional_action"-->
    <!--style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:visibility="gone"-->
    <!--tools:text="Optional Action"-->
    <!--tools:visibility="visible" />-->


    <!--&lt;!&ndash;<Button&ndash;&gt;-->
    <!--&lt;!&ndash;android:id="@+id/sync_device_button"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_width="231dp"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_height="40dp"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_alignParentTop="true"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_centerHorizontal="true"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_marginTop="188dp"&ndash;&gt;-->
    <!--&lt;!&ndash;android:background="#EC6321"&ndash;&gt;-->
    <!--&lt;!&ndash;android:bottomLeftRadius="10dp"&ndash;&gt;-->
    <!--&lt;!&ndash;android:bottomRightRadius="10dp"&ndash;&gt;-->
    <!--&lt;!&ndash;android:text="Sync Device To Count Steps"&ndash;&gt;-->
    <!--&lt;!&ndash;android:textColor="#FFFFFF"&ndash;&gt;-->
    <!--&lt;!&ndash;android:topLeftRadius="10dp"&ndash;&gt;-->
    <!--&lt;!&ndash;android:topRightRadius="10dp"/>&ndash;&gt;-->

    <!--&lt;!&ndash;<Button&ndash;&gt;-->
    <!--&lt;!&ndash;android:id="@+id/continue_without_device_button"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_width="231dp"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_height="40dp"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_centerInParent="true"&ndash;&gt;-->
    <!--&lt;!&ndash;android:background="#EEEEEE"&ndash;&gt;-->
    <!--&lt;!&ndash;android:text="Skip, Enter Steps Manually"&ndash;&gt;-->
    <!--&lt;!&ndash;android:textColor="#202020"/>&ndash;&gt;-->


    <!--</RelativeLayout>-->


</android.support.constraint.ConstraintLayout>